# sim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: sim.hpp
include/sim/: engine.hpp  math.hpp  sim.hpp  vulkan.hpp
resources/shaders/: cube-frag.spv  cube-vert.spv  cube.frag  cube.vert
src/: main.cpp  math.cpp  sim.cpp  vulkan.cpp
